--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "ejs": "2.4.1",
     "express": "4.13.3",
     "rand-token": "^0.3.0",
