--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
+  "description": "TARA autentimisteenuse kasutamise praktiline näide",
+  "repository": "https://github.com/PriitParmakson/Samategev",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
+  "keywords": ["node"],
   "image": "heroku/nodejs"
 }
