--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "query-string": "^5.0.0",
     "rand-token": "^0.3.0",
     "request": "^2.83.0",
     "simple-oauth2": "^1.3.0"
