--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "query-string": "^5.0.0",
     "rand-token": "^0.3.0",
     "request": "^2.83.0",
+    "request-debug": "^0.2.0",
     "simple-oauth2": "^1.3.0"
   },
   "repository": {
